--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: GPL-2
 Depends:
     R (>= 3.1)
 Imports: 
-    htmltools
+    htmltools, fontawesome
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
